# amplifier-bundle-plugin-compat

./: README.md  bundle.md  pyproject.toml
amplifier_plugin_compat/: __init__.py  cli.py  installer.py  parser.py  registry.py  translator.py
tests/: __init__.py  test_parser.py  test_translator.py
tools/: plugins_tool.py
